# fastapi_chatgpt

./: .gitignore  .pre-commit-config.yaml  README.md  pdm.toml  pyproject.toml  requirements.txt
src/app/: main.py
src/app/api/: routers.py
src/app/api/v1/: chatgpt.py  interpreter.py  ollama.py
src/app/common/: interpreter.py  log.py  open_interpreter.py  response.py
src/app/core/: conf.py  path_conf.py
src/app/schemas/: interpreter.py  ollama.py
