[project]
name = "fastapi-chatgpt"
version = "0.0.1"
description = "Providing chatbot APIs with fastapi"
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
dependencies = [
    "fastapi>=0.104.1",
    "open-interpreter>=0.1.11",
    "pydantic-settings>=2.0.3",
    "loguru>=0.7.2",
    "uvicorn>=0.24.0.post1",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
test = [
    "pre-commit>=3.5.0",
]
lint = [
    "ruff>=0.1.5",
]

[tool.ruff]
line-length = 120
cache-dir = "./.ruff_cache"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 1
order-by-type = true

[tool.ruff.format]
quote-style = "single"
